# NSK_OpenData_Bot

./: .env.example  .gitignore  ARC.md  BACKLOG.md  Dockerfile  IQ-roadmap.md  Procfile  README.md  SIGMA_BACKLOG.md  SIGMA_USER_GUIDE.md  SKILL.md  Sigma-audit-report.md  docker-compose.yml  pyproject.toml  readmeWindows.md  startbot.command  startwindows.bat  Запустить бот.command
config/: canonical_schemas.yaml  city_profile.yaml  city_profile_akademgorodok.yaml  city_profile_irkutsk.yaml  city_profile_kemerovo.yaml  city_profile_khabarovsk.yaml  city_profile_krasnoyarsk.yaml  city_profile_omsk.yaml  city_profile_sbercity.yaml  city_profile_spb.yaml  city_profile_tomsk.yaml  city_profile_tyumen.yaml  city_profile_vladivostok.yaml  city_profile_yekaterinburg.yaml  datasets.yaml
data/: contractors_nsk.csv  feedback.json  nsk_emissions_2tp.json  nsk_heat_sources_v1.geojson  smtp_config.json  vocabulary.yaml
deploy/: nginx.conf
docs/: analyst_onboarding.md
scripts/: build_ekb_emissions.py
sigma-backup-all-2026-05-16-0922/: cameras.json  cameras_meta.json  dim_stations.json  eco_forecast.json  ecology_daily_archive.json  fact_measurements.json  geocode_cache.json  manifest.json  medical_facilities.json  medical_meta.json  power_daily_archive.json  topic_construction_commissioned.json  topic_culture.json  topic_kindergartens.json  topic_libraries.json  topic_osm_culture.json  topic_osm_culture_meta.json  topic_osm_kindergartens.json  topic_osm_kindergartens_meta.json  topic_osm_libraries.json  topic_osm_libraries_meta.json  topic_osm_parking.json  topic_parking.json  (+23 more)
(+154 files in other folders)
